// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/Login/OAuth2LoginForm should render OAuth2 login form with custom login tip 1`] = `
<body>
  <div>
    <div
      class="oauth2-login-form"
    >
      <div
        class="oauth2-tips"
      >
        点击下方按钮跳转到授权页面进行登录：
      </div>
      <a
        class="ant-btn ant-btn-primary oauth2-login-btn basic-button-wrapper css-lfzis8"
        href="/v1/dms/oauth2/link"
      >
        <span>
          Login with OAuth2
        </span>
      </a>
    </div>
  </div>
</body>
`;

exports[`page/Login/OAuth2LoginForm should render OAuth2 login form with default login tip 1`] = `
<body>
  <div>
    <div
      class="oauth2-login-form"
    >
      <div
        class="oauth2-tips"
      >
        点击下方按钮跳转到授权页面进行登录：
      </div>
      <a
        class="ant-btn ant-btn-primary oauth2-login-btn basic-button-wrapper css-lfzis8"
        href="/v1/dms/oauth2/link"
      >
        <span>
          使用第三方账户登录
        </span>
      </a>
    </div>
  </div>
</body>
`;
